# WasmEdge-tensorflow-tools

./: .CurrentChangelog.md  CMakeLists.txt  Changelog.md  README.md
.github/scripts/: clang-format.sh
.github/workflows/: build.yml  release-published.yml  release.yml
docker/: Dockerfile.release
tools/: CMakeLists.txt  download_dependencies_all.sh  download_dependencies_tf.sh  download_dependencies_tflite.sh  show-tflite-tensor.cpp  ssvmr-lite.cpp  ssvmr.cpp  wasmedger-lite.cpp  wasmedger.cpp
